deploy/overlays/local/node-zio/components/transform-rest-gateway/transform-rest-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: zio-transform-rest-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: transform.zio.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zio-transform-rest-route
spec:
  parentRefs:
    - name: zio-transform-rest-gateway
  hostnames:
    - transform.zio.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: transform-rest
          port: 8080
